<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    tools:context=".Activities.WelcomeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_dengar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_tv1"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_gratis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_tv2"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="26dp"
            app:layout_constraintTop_toBottomOf="@id/tv_dengar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_gratis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/ic_bg"
            android:gravity="center"
            android:clipToPadding="false"
            android:paddingHorizontal="40dp"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="0dp"
                android:background="@drawable/background_button"
                android:elevation="1dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                app:backgroundTint="@null"
                android:text="@string/w_bt1"
                android:textAllCaps="false"
                android:shadowRadius="3.0"
                android:shadowDx="3"
                android:shadowColor="@color/mBlackSmooth"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:targetApi="lollipop" />
            <Button
                android:id="@+id/btn_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/w_bt2"
                android:textAllCaps="false"
                android:background="@drawable/background_button_outlined"
                android:textColor="@color/white"
                android:paddingVertical="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                app:icon="@drawable/ic_baseline_smartphone_24"
                app:iconTint="@color/white"
                app:iconGravity="textStart"
                app:backgroundTint="@null"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                />
            <Button
                android:id="@+id/btn_noemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/w_bt3"
                android:textAllCaps="false"
                android:background="@drawable/background_button_outlined"
                android:textColor="@color/white"
                android:paddingVertical="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:icon="@drawable/ic_icon_ionic_logo_google"
                app:iconTint="@color/white"
                app:iconGravity="textStart"
                app:backgroundTint="@null"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                />

            <TextView
                android:id="@+id/tv_masuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w_tv3"
                android:textSize="24dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>