<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mBlackBold"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    tools:context=".Activities.RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="25dp"
        >
        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/white"
            android:background="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u_tv1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="21dp"
            app:layout_constraintTop_toTopOf="@id/ib_back"
            app:layout_constraintBottom_toBottomOf="@id/ib_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/ib_back"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_lagu"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="140dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_add"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:id="@+id/icon_upload"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/ic_group_112" />
                    <ImageView
                        android:id="@+id/icon_song"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:visibility="gone"
                        android:background="@drawable/ic_group_133" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/u_tv2"
                        android:textColor="@color/mBlackSmooth"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16dp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_change_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tombol_gambar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/background_button"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/u_tv3"
                    android:textSize="18dp"
                    android:textColor="@color/mBlackSmooth"
                    android:fontFamily="@font/poppins_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="20dp"/>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="14dp"
                    app:tint="@color/mBlackSmooth" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <EditText
                android:id="@+id/et_song_title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/background_button"
                android:textColorHint="@color/mBlackSmooth"
                android:hint="@string/u_tv4"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="20dp"
                android:textSize="18dp"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/et_song_artist"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/background_button"
                android:textColorHint="@color/mBlackSmooth"
                android:hint="@string/u_tv5"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="20dp"
                android:textSize="18dp"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_gravity="center_horizontal"
                app:hintTextColor="@color/mBlackSmooth"
                app:boxBackgroundMode="outline"
                android:textColorHint="@color/mBlackSmooth"
                android:background="@drawable/background_button"
                android:hint="Genre">
                <AutoCompleteTextView
                    android:id="@+id/tv_genre"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:background="@drawable/background_button"
                android:elevation="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_semibold"
                app:backgroundTint="@null"
                android:text="@string/u_bt1"
                android:textAllCaps="false"
                android:shadowRadius="3.0"
                android:shadowDx="3"
                android:shadowColor="@color/mBlackSmooth"
                android:textColor="@color/white"
                android:textSize="22sp"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>