<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mBlackBold"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    tools:context=".Fragments.SearchFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="25dp"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_tv1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="23dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

<!--Favorite Kosong-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:itemCount="10"
            android:visibility="gone"
            tools:listitem="@layout/item_rekomendasi"/>

<!--        Favorite tidak kosong-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmptyFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="197dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/f_tv2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/f_tv3"
                android:textAlignment="center"
                android:textColor="@color/mBlackSmooth"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>