<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mBlackBold"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    tools:context=".Activities.RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="25dp"
        >
        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/white"
            android:background="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_tv1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="21dp"
            app:layout_constraintTop_toTopOf="@id/ib_back"
            app:layout_constraintBottom_toBottomOf="@id/ib_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ib_back"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:background="@color/mBlackMedium"
                android:backgroundTint="@color/mBlackMedium"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_icon_awesome_user_alt"
                        android:backgroundTint="@color/mBlackSmooth"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d_tv2"
                        android:textColor="@color/mBlackSmooth"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16dp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_change_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:maxWidth="280dp"
                android:layout_height="wrap_content"
                android:text="@string/d_tv3"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:textSize="24dp"
                android:fontFamily="@font/poppins_semibold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint=""
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                android:background="@drawable/background_button"
                app:helperTextTextColor="@color/design_default_color_error">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="text"
                    android:textColor="@color/mBlackSmooth" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:maxWidth="280dp"
                android:layout_height="wrap_content"
                android:text="@string/d_tv4"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:textSize="24dp"
                android:fontFamily="@font/poppins_semibold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint=""
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                android:background="@drawable/background_button"
                app:helperTextTextColor="@color/design_default_color_error">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="text"
                    android:textColor="@color/mBlackSmooth" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:maxWidth="280dp"
                android:layout_height="wrap_content"
                android:text="@string/d_tv5"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:textSize="24dp"
                android:fontFamily="@font/poppins_semibold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint=""
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/mBlackSmooth"
                android:background="@drawable/background_button"
                app:helperTextTextColor="@color/design_default_color_error">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="text"
                    android:textColor="@color/mBlackSmooth" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_masuk"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:paddingVertical="0dp"
                android:paddingHorizontal="30dp"
                android:background="@drawable/background_button"
                android:elevation="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_semibold"
                app:backgroundTint="@null"
                android:text="@string/d_tv6"
                android:textAllCaps="false"
                android:shadowRadius="3.0"
                android:shadowDx="3"
                android:shadowColor="@color/mBlackSmooth"
                android:textColor="@color/white"
                android:textSize="22sp"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>